[package]
name = "shadowmap"
version = "0.1.0"
edition = "2021"
authors = ["ShadowMap Contributors"]
license = "Apache-2.0"
description = "Hacker-grade Rust reconnaissance framework for subdomain enumeration, vulnerability detection, and attack surface mapping."
repository = "https://github.com/mdabir1203/ShadowMap"
readme = "README.md"
keywords = ["security", "reconnaissance", "subdomain", "pentest", "rust"]
categories = ["command-line-utilities", "network-programming", "security"]
homepage = "https://github.com/mdabir1203/ShadowMap"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }

# JSON + serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV export
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Concurrency utilities
futures = "0.3"

# Domain & DNS
trust-dns-resolver = "0.23"

# Regex for fingerprints / parsing
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Random for user-agent rotation, backoff, etc.
rand = "0.8"

# Optional: pretty tables for terminal output
tabled = "0.15"

# TLS cert analysis
rustls = "0.23"
webpki = "0.22"
native-tls = "0.2.14"
itertools = "0.14.0"
lazy_static = "1.5.0"
idna = "1.1.0"
chrono = "0.4.41"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
